# Cpp_programming

./: .gitignore
T1/: struct.pro
T1/struct/: main.cpp  struct.h  struct.pro
T2/: gitignore.txt
T2/build-struct_first-Desktop_Qt_5_7_0_MinGW_32bit-Debug/: .qmake.stash  Makefile
T2/struct_first/: struct_first.pro
addIntArr/: addIntArr.cbp  addIntArr.layout  main.cpp
addPtr/: addPtr.depend  main.cpp
array/array/: array.pro
array_class/array/: start_work_with_array.h
arrays/: CMakeLists.txt  main.cpp
arrays/bubble_sort/: CMakeLists.txt
au4lab_title/: main.cpp
bubble_sort/: main.cpp
class/: class.pro
class/class/: class.pro  main.cpp  queue.h
data_types_and_operators_part_2/: CMakeLists.txt  main.cpp
data_types_and_operators_part_2/bitwise_operators/: CMakeLists.txt  main.cpp
functions_basic_lesson/: CMakeLists.txt  main.cpp
functions_part_2/References/: main.cpp
lab1/: answer.h  calculate.cpp  calculate.h  inputData.cpp  inputData.h  lab1.pro  main.cpp  printanswer.cpp  printanswer.h  testprint.cpp  testprint.h  values.h
multi_array/: main.cpp
new/: README.md
old/ptr_old/pointers/Pointers/: CMakeLists.txt
old/threads_old/: CMakeLists.txt  main.cpp
pointers_lesson/: .gitignore  CMakeLists.txt  main.cpp
ptr2func/: compare.cpp  main.cpp  ptr2func.depend
ptr2ptr/: main.cpp  ptr2ptr.cbp
re_pointers/: main.cpp  pointers.depend
string_array/: CMakeLists.txt  main.cpp
string_lesson/: .gitignore  CMakeLists.txt
struct_lessons/: main.cpp
timer/: main.cpp  timer.depend
two_dimensional_arrays/: CMakeLists.txt  main.cpp
(+91 files in other folders)
