#Pointers

set(
        POINTERS_APP_SOURCE_FILES
        main.cpp
        arithmetic_on_pointers.cpp arithmetic_on_pointers.h
        assigning_values_using_pointers.cpp assigning_values_using_pointers.h
        introduction.cpp introduction.h
        print_labels.cpp print_labels.h
		variable.h
)

add_executable(POINTERS_APP ${POINTERS_APP_SOURCE_FILES})
